--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Nav Bar -->
         <nav>
             <ul>
-                <li><a href="Index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="props.html">Props</a></li>
                 <li><a href="aboutme.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
